Fixed styling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,3 +43,11 @@ li
     list-style: none;
     text-align: center;
 }
+
+@media only screen and (max-width: 45ch) {
+    /* For desktop: */
+    main
+    {
+        display: block;
+    }
+  }
